{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "362566d6-5663-9b3b-c468-475a8e4a51d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ddb42a280332d2c",
            "domain": "vpc",
            "id": "eipalloc-01ddb42a280332d2c",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-19-223-174.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.223.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "NAT EIP",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "NAT EIP",
              "Owner": "Dev Team"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5a908b69cfc0745",
            "association_id": "eipassoc-01c10ecc4ef15a37b",
            "domain": "vpc",
            "id": "eipalloc-0c5a908b69cfc0745",
            "instance": "i-0f558d0653bc2771d",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0d6f6f27fe955f4a8",
            "private_dns": "ip-10-0-1-144.eu-west-1.compute.internal",
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-34-255-42-51.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.42.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "Webserver EIP",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Webserver EIP",
              "Owner": "Dev Team"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.web-kp",
            "aws_security_group.web-sg",
            "aws_subnet.main-public-1",
            "aws_vpc.main",
            "data.http.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d26988ace6e4122b",
            "arn": "arn:aws:ec2:eu-west-1:197150636606:instance/i-0add715a284711770",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0add715a284711770",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b66f3abc71b5bbcb",
            "private_dns": "ip-10-0-4-37.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6b4891463dccc02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033d003c347e17d68",
            "tags": {
              "Environment": "Development",
              "Name": "Database",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Database",
              "Owner": "Dev Team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049f823942a32262a"
            ]
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.web-kp",
            "aws_security_group.db-sg",
            "aws_security_group.web-sg",
            "aws_subnet.main-private-1",
            "aws_subnet.main-public-1",
            "aws_vpc.main",
            "data.http.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d26988ace6e4122b",
            "arn": "arn:aws:ec2:eu-west-1:197150636606:instance/i-0f558d0653bc2771d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f558d0653bc2771d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6f6f27fe955f4a8",
            "private_dns": "ip-10-0-1-144.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-34-243-130-236.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.243.130.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b1a0c34e11f810b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb7406e8e684094c",
            "tags": {
              "Environment": "Development",
              "Name": "Webserver",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Webserver",
              "Owner": "Dev Team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01fa4705088a2eb0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.web-kp",
            "aws_security_group.web-sg",
            "aws_subnet.main-public-1",
            "aws_vpc.main",
            "data.http.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:internet-gateway/igw-092deeb9f88853153",
            "id": "igw-092deeb9f88853153",
            "owner_id": "197150636606",
            "tags": {
              "Environment": "Development",
              "Name": "Main Internet Gateway",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Main Internet Gateway",
              "Owner": "Dev Team"
            },
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ddb42a280332d2c",
            "association_id": "eipassoc-00061be2bc0c3252a",
            "connectivity_type": "public",
            "id": "nat-0f1a0451d18b7d217",
            "network_interface_id": "eni-098d72646999672e7",
            "private_ip": "10.0.1.246",
            "public_ip": "52.19.223.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fb7406e8e684094c",
            "tags": {
              "Environment": "Development",
              "Name": "DB NAT Gateway",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "DB NAT Gateway",
              "Owner": "Dev Team"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a16f8d35a5e7b2da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f1a0451d18b7d217",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a16f8d35a5e7b2da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:route-table/rtb-0f66620cc8714b455",
            "id": "rtb-0f66620cc8714b455",
            "owner_id": "197150636606",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092deeb9f88853153",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "Main Public Route Table",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Main Public Route Table",
              "Owner": "Dev Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:route-table/rtb-0a16f8d35a5e7b2da",
            "id": "rtb-0a16f8d35a5e7b2da",
            "owner_id": "197150636606",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "Private Route Table",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Private Route Table",
              "Owner": "Dev Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d75a0bce73a7b2a0",
            "route_table_id": "rtb-0a16f8d35a5e7b2da",
            "subnet_id": "subnet-033d003c347e17d68"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.main-private-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b857855dbed74b2e",
            "route_table_id": "rtb-0f66620cc8714b455",
            "subnet_id": "subnet-0fb7406e8e684094c"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09720c3b66a62c28d",
            "route_table_id": "rtb-0f66620cc8714b455",
            "subnet_id": "subnet-0ee2ce1cf0bbc3397"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:security-group/sg-049f823942a32262a",
            "description": "mysql from webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049f823942a32262a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.144/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.144/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.144/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_server_sg",
            "name_prefix": "",
            "owner_id": "197150636606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "DB Security Group",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "DB Security Group",
              "Owner": "Dev Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.web-kp",
            "aws_security_group.web-sg",
            "aws_subnet.main-public-1",
            "aws_vpc.main",
            "data.http.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:security-group/sg-01fa4705088a2eb0b",
            "description": "HTTP for webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fa4705088a2eb0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "80.193.157.230/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_server_sg",
            "name_prefix": "",
            "owner_id": "197150636606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "Web Security Group",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Web Security Group",
              "Owner": "Dev Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:subnet/subnet-033d003c347e17d68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033d003c347e17d68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "197150636606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "Main Private 1",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Main Private 1",
              "Owner": "Dev Team"
            },
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:subnet/subnet-0a9b53f290986eb91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9b53f290986eb91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "197150636606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "Main Private 2",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Main Private 2",
              "Owner": "Dev Team"
            },
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:subnet/subnet-0fb7406e8e684094c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb7406e8e684094c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "197150636606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "Main Public 1",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Main Public 1",
              "Owner": "Dev Team"
            },
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:subnet/subnet-0ee2ce1cf0bbc3397",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee2ce1cf0bbc3397",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "197150636606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "Main Public 2",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Main Public 2",
              "Owner": "Dev Team"
            },
            "vpc_id": "vpc-0012141bf5addda1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197150636606:vpc/vpc-0012141bf5addda1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d502e294250be17",
            "default_route_table_id": "rtb-05f53d3c9a9592a78",
            "default_security_group_id": "sg-087f7f258badaa1dd",
            "dhcp_options_id": "dopt-01d9e4f32954c608a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0012141bf5addda1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f53d3c9a9592a78",
            "owner_id": "197150636606",
            "tags": {
              "Environment": "Development",
              "Name": "Main",
              "Owner": "Dev Team"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Main",
              "Owner": "Dev Team"
            }
          }
        }
      ]
    }
  ]
}